Added image and icons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Adaptative</title>
+    <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-32x32.png" sizes="32x32">
+    <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-180x180.png">
+    <meta name="msapplication-TileImage" content="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-270x270.png">
+    <title>Projet Statique</title>
     <style>
 
         @media screen and (max-width: 980px) {
