--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-180x180.png">
     <meta name="msapplication-TileImage" content="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-270x270.png">
-    <title>Projet Statique</title>
+    <title>Projet Statique xxx</title>
     <style>
 
         @media screen and (max-width: 980px) {
