--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-180x180.png">
     <meta name="msapplication-TileImage" content="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-270x270.png">
-    <title>Projet Statique xxx</title>
-    <style>
+    <link href="./css/core.css" rel="stylesheet">
+    <script src="./js/core.js"></script>
+    <title>IFOPlus - Projet Statique</title>
 
-        @media screen and (max-width: 980px) {
-            body {
-                max-width: 980px;
-                margin: 0 auto;
-                padding: 20px;
-            }
-        }
-        
-
-    </style>
 </head>
 <body>
     <header>
