--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description=" content="IFOPLUS - Static Project">
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-32x32.png" sizes="32x32">
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-180x180.png">
     <meta name="msapplication-TileImage" content="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-270x270.png">
     <link href="./css/core.css" rel="stylesheet">
-    <script src="./js/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
+    <script src="./js/core.js" defer></script>
     <title>IFOPlus - Projet Statique</title>
-
 </head>
 <body>
     <header>
-        <h1>Test</h1>
+        <section class="image banner">
+            <a href="index.html">
+                <img src="./images/deconinck-index.jpg" alt="Deconinck Index" class="img-center">
+            </a>
+        </section>
     </header>
     <nav>
 
