--- a/index.html
+++ b/index.html
@@ -7,24 +7,62 @@
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-32x32.png" sizes="32x32">
     <link rel="icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-180x180.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" >
+
+
     <meta name="msapplication-TileImage" content="./images/cropped-LOGO_BG_BLACK_BIG-e1608048104767-270x270.png">
-    <link href="./css/core.css" rel="stylesheet">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
     <script src="./js/core.js" defer></script>
+    <link href="./css/core.css" rel="stylesheet">
     <title>IFOPlus - Projet Statique</title>
 </head>
-<body>
+<body class="d-flex flex-column h-100">
     <header>
-        <section class="image banner">
-            <a href="index.html">
-                <img src="./images/deconinck-index.jpg" alt="Deconinck Index" class="img-center">
-            </a>
-        </section>
+        <div class="d-flex align-items-center justify-content-center">
+            <div class="row">
+                <div class="col-12">
+                <a href="index.html">
+                    <img src="./images/deconinck-index.jpg" alt="Deconinck Index" class="img-fluid"/>
+                </a>
+                </div>
+            </div>
+        </div>
     </header>
-    <nav>
-
-    </nav>
     <main>
+        <!-- d-flex -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-red">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="https://philip.avalon-zone.be">Nos Classiques</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="https://philip.avalon-zone.be/wine">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="https://philip.avalon-zone.be/contact">Plan d'accès</a>
+                    </li>
+                </ul>
+            </div>
+          </div>
+        </nav>
+    <div class="d-flex justify-content-center">
+        <p class="c-font">Deconinck Wine and Spirit since 1886</p>
+    </div>
+    <div class="d-flex justify-content-center">
+        <p >
+            <center class="g-font">
+                Rue Lahaut B-1380 Genappe<br>
+                Tel. +32 2/658.26.15<br>
+                TVA 111.256.2458<br>
+            </center>
+        </p>
+    </div>
 
     </main>
     <footer>
