--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- d-flex -->
     <nav class="navbar navbar-expand-lg navbar-light bg-red">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse justify-content-center">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="https://philip.avalon-zone.be">Nos Classiques</a>
@@ -55,18 +55,26 @@
         <p class="c-font">Deconinck Wine and Spirit since 1886</p>
     </div>
     <div class="d-flex justify-content-center">
-        <p >
-            <center class="g-font">
+        <p class="text-center g-font">
                 Rue Lahaut B-1380 Genappe<br>
                 Tel. +32 2/658.26.15<br>
                 TVA 111.256.2458<br>
-            </center>
         </p>
     </div>
 
     </main>
     <footer>
-
+        <nav class="navbar fixed-bottom navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse justify-content-center">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="g-font" aria-current="page" href="https://philip.avalon-zone.be/wine">Mentions légales</a>
+                        </li>
+                    </ul>
+            </div>
+            </div>   
+        </nav>
     </footer>
 </body>
 </html>
