--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-12">
                 <a href="index.html">
-                    <img src="./images/deconinck-index.jpg" alt="Deconinck Index" class="img-fluid"/>
+                    <img src="./images/deconinck-index.jpg" alt="Deconinck Index" class="cropped-img"/>
                 </a>
                 </div>
             </div>
@@ -49,17 +49,26 @@
                     </li>
                 </ul>
             </div>
-          </div>
-        </nav>
+        </div>
+    </nav>
     <div class="d-flex justify-content-center">
-        <p class="c-font">Deconinck Wine and Spirit since 1886</p>
-    </div>
-    <div class="d-flex justify-content-center">
-        <p class="text-center g-font">
-                Rue Lahaut B-1380 Genappe<br>
-                Tel. +32 2/658.26.15<br>
-                TVA 111.256.2458<br>
-        </p>
+        <div class="card card-box">
+            <div class="card-header">
+                <b class="font-red">Plan d'accès</b>
+            </div>
+            <div class="card-body">
+                <iframe id="cdb-iframe" class="cdb-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2526.2342989396407!2d4.6154343156261195!3d50.7155922795128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c17d2af3d1aab7%3A0x3443597dc6120ce4!2sDe%20Coninck%20Wine%20%26%20Spirit%20since%201886%20-%20Wavre!5e0!3m2!1sfr!2sfr!4v1618775104513!5m2!1sfr!2sfr" 
+                    width="900"
+                    height="450"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy">
+                </iframe>
+                <div class="row">
+                    <a class="g-font" href="https://maps.google.com/maps?ll=50.715592,4.617623&z=16&t=m&hl=fr&gl=FR&mapclient=embed&cid=3765952110140722404">Agrandir le plan</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="d-flex justify-content-center">
         <a class="g-font-small" aria-current="page" href="https://www.deconinckwine.com/conditions-generales-de-vente/">Mentions légales</a>
